[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77",
  "wheel",
]

[project]
name = "kaggle-sandbox"
version = "0.1.0"
description = "Minimal Kaggle competition project template."
readme = "README.md"
keywords = [
  "kaggle",
  "machine-learning",
  "template",
]
license = "MIT"
license-files = [
  "LICENSE",
]
authors = [
  { name = "Jiri Borovec", email = "6035284+Borda@users.noreply.github.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []
optional-dependencies.kaggle = [
  "kaggle",
  "kagglehub",
]
optional-dependencies.ml = [
  "torch>=2.8",
]
urls."Source Code" = "https://github.com/Borda/kaggle_sandbox"

[dependency-groups]
dev = [
  "build",
  "check-manifest",
  "pre-commit",
  "pytest>=8.4.2,<9.2",
  "pytest-cov>=7.1,<7.2",
  "ruff",
  "twine>=6.2,<6.3",
]
test = [
  "pytest>=8.4.2,<9.2",
  "pytest-cov>=7.1,<7.2",
]

[tool.setuptools]
packages.find.where = [
  "src",
]

[tool.ruff]
target-version = "py310"
line-length = 120
format.preview = true
lint.select = [
  "D",  # see: https://pypi.org/project/pydocstyle
  "E",
  "F",  # see: https://pypi.org/project/pyflakes
  "I",  # see: https://pypi.org/project/isort/
  "N",  # see: https://pypi.org/project/pep8-naming
  "S",  # see: https://pypi.org/project/flake8-bandit
  "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",  # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "A",    # see: https://pypi.org/project/flake8-builtins
  "ANN",  # see: https://pypi.org/project/flake8-annotations
  "B",    # see: https://pypi.org/project/flake8-bugbear
  "C4",   # see: https://pypi.org/project/flake8-comprehensions
  "EXE",  # see: https://pypi.org/project/flake8-executable
  "ISC",  # see: https://pypi.org/project/flake8-implicit-str-concat
  "PERF", # see: https://pypi.org/project/perflint/
  "PIE",  # see: https://pypi.org/project/flake8-pie
  "PLE",  # see: https://pypi.org/project/pylint/
  "PT",   # see: https://pypi.org/project/flake8-pytest-style
  "PYI",  # see: https://pypi.org/project/flake8-pyi/
  "Q",    # see: https://pypi.org/project/flake8-quotes
  "RET",  # see: https://pypi.org/project/flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # see: https://pypi.org/project/flake8-simplify
  "T10",  # see: https://pypi.org/project/flake8-debugger
  "TID",  # see: https://pypi.org/project/flake8-tidy-imports/
  "YTT",  # see: https://pypi.org/project/flake8-2020
]
lint.ignore = [
  "D100",   # Missing docstring in public module.
  "D104",   # Missing docstring in public package.
  "D107",   # Missing docstring in `__init__`.
  "E731",   # Do not assign a lambda expression, use a def.
  "EXE002", # File is executable but no shebang is present.
  "ISC001", # Potential conflict, flagged by Ruff itself.
]
lint.per-file-ignores."tests/**/*.py" = [
  "D103",
  "S101",
]
lint.unfixable = [
  "F401",
]
lint.mccabe.max-complexity = 10
lint.pydocstyle.convention = "google"

[tool.codespell]
quiet-level = 3

[tool.pytest]
ini_options.pythonpath = [
  "src",
]
ini_options.norecursedirs = [
  ".git",
  ".github",
  "dist",
  "build",
  "docs",
  "notebooks",
]
ini_options.addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--color=yes",
  "--disable-pytest-warnings",
]
ini_options.filterwarnings = [
  "error::FutureWarning",
]
ini_options.xfail_strict = true
ini_options.junit_duration_report = "call"

[tool.coverage]
run.source = [
  "challenge_xyz",
]
report.exclude_lines = [
  "pass",
  "pragma: no cover",
]
